@@ -106,6 +106,8 @@ enum {
   PROP_EWMH_ICON,
   PROP_EWMH_OPACITY,
   PROP_EWMH_STARTUP_ID,
+  PROP_EWMH_STATE,
+  PROP_EWMH_STATE_STICKY,
   NUM_PROPS
 };
 
